<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBEDE1"
    android:padding="15dp"
    tools:context=".activity.SignupActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="50dp" />

    <EditText
        android:id="@+id/name"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/log"
        android:drawableStart="@drawable/ic_baseline_person_pin_24"
        android:hint="@string/enter_your_name"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2" />

    <EditText
        android:id="@+id/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/log"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:hint="@string/enter_your_email"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/log"
        android:drawableStart="@drawable/ic_baseline_lock_open_24"
        android:hint="@string/enter_your_password"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <EditText
        android:imeOptions="actionDone"
        android:inputType="date"
        android:drawablePadding="10dp"
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/log"
        android:drawableStart="@drawable/ic_baseline_date_range_24"
        android:hint="@string/enter_your_birth"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/add"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="55dp"
        android:text="@string/if_you_have_already_account"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/log_in"
        android:textColor="#D33200"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/account"
        app:layout_constraintTop_toBottomOf="@+id/btn" />


</androidx.constraintlayout.widget.ConstraintLayout>