<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
app:cardCornerRadius="40dp"
app:cardElevation="10dp"
app:cardUseCompatPadding="true"
tools:context=".activity.ProductDetailsActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/Img"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/add_image"
        android:src="@drawable/addimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/button"
        android:ems="10"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/product_name"
        android:textColor="#ad9b82"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Img"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <TextView
        android:id="@+id/txetPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/product_price"
        android:textColor="#ad9b82"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtName"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/txetDescription"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button"
        android:gravity="start|top"
        android:lines="7"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/description"
        android:textColor="#ad9b82"
        android:textColorHint="#ad9b82"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txetPrice"
        tools:ignore="RtlSymmetry" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:progressTint="#FFC107"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txetDescription"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRating"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/add"
        android:text="@string/rating"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
         app:layout_constraintStart_toEndOf="@id/btnCart"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintTop_toBottomOf="@id/ratingBar"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCart"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/add"
        android:text="@string/cart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnRating"
        app:layout_constraintTop_toBottomOf="@id/ratingBar"
        tools:ignore="TextContrastCheck,TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>