<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="170dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="25dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="156dp"
        android:layout_height="304dp"
        android:background="#FBE6DF"
        android:padding="10dp">


        <ImageView
            android:id="@+id/arroProdcat"
            android:layout_width="26dp"
            android:layout_height="27dp"
            android:elevation="9dp"
            android:src="@drawable/ic_baseline_arrow_circle_right_24"
            app:layout_constraintBottom_toTopOf="@+id/btnDelete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.961"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.031" />

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="80dp"
            android:layout_height="148dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/product_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/product" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="serif"
            android:text="@string/product_name"
            android:textColor="#ad9b82"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgProduct"
            tools:ignore="TextContrastCheck,TextContrastCheck" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdate"
            android:layout_width="94dp"
            android:layout_height="35dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="13dp"
            android:background="@drawable/button"
            android:text="@string/update"
            android:textColor="#ad9b82"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/btnDelete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtName"
            tools:ignore="SmallSp,TouchTargetSizeCheck,TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDelete"
            android:layout_width="96dp"
            android:layout_height="34dp"
            android:background="@drawable/button"
            android:text="@string/delete"
            android:textColor="#ad9b82"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtName"
            app:layout_constraintVertical_bias="0.771"
            tools:ignore="SmallSp,TouchTargetSizeCheck,TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>